--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,25 +70,31 @@
 			<footer id="filtres">
 			        <div class="row">	
 				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile" id="color-1">
+				  			<div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; M O D E L</h4></div>
 				   			<div id="businessModelPieChart" class="chart"></div>
 				  		</div>
 				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile" id="color-2">
+					  		<div class="chart-title"><h4>C A T E G O R Y</h4></div>
 				  			<div id="categoryRowChart" class="chart"></div>
 				  		</div>
-				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile">
-				  			<div class="row" id="color-3">
+				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				  			<div class="row mini-tuile" id="color-3">
+					  			<div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H &nbsp;&nbsp;  M E M B E R S H I P</h4></div>
 			  	  				<div class="chart" id="FF"></div>
 				  			</div>
-				  			<div class="row" id="color-4">
+				  			<div class="row mini-tuile" id="color-4">
+				  				<div class="chart-title" id="total-raised"><h4>T O T A L &nbsp;&nbsp;  R A I S E D</h4></div>
 			  	  				<div class="chart" id="montant-leve"></div>
 				  			</div>
 				  		</div>
 					</div>	
 					<div class="row">
-				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-5"> 
+				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-5">
+					  		<div class="chart-title"><h4>C R E A T I O N &nbsp;&nbsp;  D A T E</h4></div>
 							<div id="inceptionBarChart" class="chart"></div>
 						</div>
-				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-6"> 
+				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-6">
+					  		<div class="chart-title" id=""><h4>L A S T  &nbsp;&nbsp; R O U N D S</h4></div>
 							<div id="fundsBarChart" class="chart">
 						</div>				  
 			    	</div>
