--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,7 +74,7 @@
 				   			<div id="businessModelPieChart" class="chart"></div>
 				  		</div>
 				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile" id="color-2">
-					  		<div class="chart-title"><h4>C A T E G O R Y</h4></div>
+					  		<div class="chart-title"><h4 style="color:#0D4F8B;">C A T E G O R Y</h4></div>
 				  			<div id="categoryRowChart" class="chart"></div>
 				  		</div>
 				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
