--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,7 +101,7 @@
 				<section id="discover">
 					<div class="titre"><h3 id="titre2">- D I S C O V E R -</h3></div>
 					<div class="row" id="logo-table">
-						<div class="span12" id="table_logos"></div>
+						<!-- <div class="span12" id="table_logos"></div> -->
 					</div>
 				</section>
 				<section class="about" id="about">
