--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -101,27 +101,23 @@
 				<section id="discover">
 					<div class="titre"><h3 id="titre2">- D I S C O V E R -</h3></div>
 					<div class="row" id="logo-table">
-						<!-- <div class="span12" id="table_logos"></div> -->
+						<div class="span12" id="table_logos"></div>
 					</div>
 				</section>
 				<section class="about" id="about">
 					<footer>
-						<div class = "row" id="transition">
-						</div>
 						<div class="row" id="footer">
-							<div class = "span12">
-							    <div class="col-md-2">
+							    <div class="col-md-8" style="height:50px;">
 	  								<h4 class="FizBack"> BY <a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack </a></h4>
 							    </div>
-							    <div class="col-md-8">
+							    <div class="col-md-2" style="height:50px;">
 							        <h4 class="FizBack"> SEE ALSO </h4>
 	  								<a class="FizBack" href="http://thefintechjellyfish.theassets.co"> <img class="jellyfish" src="https://www.wristbandnation.com/sites/default/upload/artwork/animal/animal6.png"> </a>
 							    </div>
-							    <div class="col-md-2">
+							    <div class="col-md-2" style="height:50px;">
 							    	<h4 class="FizBack"> SHARE </h4>
 	  								<a class="FizBack"><img id="twitter" src="http://www.harrietsanders.co.uk/wp-content/uploads/2014/07/Twitter-Black.png"> </a>
 							    </div>
-							</div>
 						</div>
 					</footer>
 				</section>
