changements design et procfile

--- a/app/static/css/lib/dc.css
+++ b/app/static/css/lib/dc.css
@@ -3,7 +3,8 @@ div.dc-chart {
 }
 
 .dc-chart rect.bar {
-	fill : #d28e85;
+	/* fill : #d28e85; */
+	fill : #9baebc;
     stroke: none;
     cursor: pointer;
 }
