--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,8 +107,12 @@
 				<section class="about" id="about">
 					<footer>
 						<div class="row" id="footer">
-							    <div class="col-md-8" style="height:50px;">
+							    <div class="col-md-6" style="height:50px;">
 	  								<h4 class="FizBack"> BY <a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack </a></h4>
+							    </div>
+							    <div class="col-md-2" style="height:50px;">
+							        <h4 class="FizBack"> FORK </h4>
+	  								<a class="FizBack" href="https://github.com/FizBack/FFintech"> <img class="github" src="https://i.imgur.com/wRNRwGX.png"> </a>
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							        <h4 class="FizBack"> SEE ALSO </h4>
@@ -116,7 +120,7 @@
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							    	<h4 class="FizBack"> SHARE </h4>
-	  								<a class="FizBack"><img id="twitter" src="http://www.harrietsanders.co.uk/wp-content/uploads/2014/07/Twitter-Black.png"> </a>
+	  								<a class="FizBack"><img class="twitter" src="http://www.harrietsanders.co.uk/wp-content/uploads/2014/07/Twitter-Black.png"> </a>
 							    </div>
 						</div>
 					</footer>
