--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
 			  <div class="navbar-collapse collapse">
 			  <ul class="nav navbar-nav navbar-right">
 			  <li class="active" ><a href="#filter" style="font-family:'Proxima Nova';font-weight:normal">FILTER</a></li>
-			  <li><a href="#discover" style="font-family:'Proxima Nova';font-weight:normal">DISCOVER</a></li>
+			  <li><a href="#explore" style="font-family:'Proxima Nova';font-weight:normal">EXPLORE</a></li>
 			  </ul>
 			  </div>
 		  </div>
@@ -71,14 +71,14 @@
 							       <a
 							        class='reset svg' 
           							href='javascript:fundsChart.filterAll();dc.redraw.all()'
-          							style='display: none; width : 20px; height : 20px;'><img class="svg" src="/static/image/whitecross.svg">
+          							style='display: none; width : 20px; height : 20px;'><img class="svg-cross" src="/static/image/whitecross.svg">
           							</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="row" id="color-3">
-							 <div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; M O D E L</h4></div>
+							 <div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; T Y P E</h4></div>
 							 <div id="businessModelPieChart" class="chart"></div>
 						</div>
 						<div class="row" id="color-4">
@@ -98,11 +98,47 @@
 					</div>
 				</div>
 				</section>
-				<section id="discover">
-					<div class="titre"><h3 id="titre2">- D I S C O V E R -</h3></div>
+				<section id="explore">
+					<div class="titre"><h3 id="titre2">- E X P L O R E -</h3></div>
 					<div class="row" id="logo-table">
 						<div class="span12" id="table_logos"></div>
-					</div>
+						
+						    <div class="modal fade" id="myModal" role="dialog">
+    							<div class="modal-dialog">
+    
+							  		<div class="modal-content">
+										<div class="modal-body">
+											<button type="button" class="close" data-dismiss="modal"><img class="svg-cross" src="/static/image/whitecross.svg"></button>
+								  			<div class="container-logo">	
+								  				<a class="modal-websitelink"><img class="modal-logo"></a>
+								  			</div>
+								  			<h4 class="modal-company modal-titre"></h4>
+								  			<h4 class="modal-abstract modal-txt"></h4>
+								  			<div class="modal-padding">
+								  				<a class="modal-FF" href="http://www.francefintech.org/"><img class="FF-mini" src="http://blog.bolden.fr/wp-content/uploads/2015/07/france-fintech.png"></a>
+								  				<a class="modal-linkedin"><img src="/static/image/In-2CRev-21px-R.png" class="linkedin-logo"></a>
+								  				<h4 class="modal-FFmembership modal-txt"></h4>
+								  				<h4 class="modal-creation modal-txt"></h4>
+								  				<h4 class="modal-CEO modal-txt"></h4>
+								  				<h4 class="modal-Linkedin modal-txt"></h4>
+								  				<h4 class="modal-category modal-txt"></h4>
+								  				<h4 class="modal-BM modal-txt"></h4>
+								  				<h4 class="modal-headquarters modal-txt"></h4>
+								  				<h4 class="modal-website modal-txt"></h4>
+								  				<h4 class="modal-round1 modal-txt"></h4>
+								  				<h4 class="modal-round2 modal-txt"></h4>
+								  				<h4 class="modal-round3 modal-txt"></h4>
+								  				<h4 class="modal-round4 modal-txt"></h4>
+								  				<h4 class="modal-competition modal-txt"></h4>
+								  				
+								  			</div>
+										</div>
+							  		</div>
+	  
+								</div>
+							
+							</div>
+					  </div>
 				</section>
 				<section class="about" id="about">
 					<footer>
@@ -127,62 +163,6 @@
 				</section>
 	  	   </div>
 	  </div>
-	  
-<!-- 
-	  <div id="infographie">
-	  	
-		  <div class="container-fluid">
-
-			<div class = "row">
-			  <div class="span12" id="table_logos"></div>
-			</div>
-
-			<span id="btn-filter" type="button" class="btn"><img src="http://s30.postimg.org/onqkun8qp/basic2_178_filter_512.png" alt="Mountain View" style="width:50px;height:50px;"></span>
-			
-			<footer id="filtres">
-			        <div class="row">	
-				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile" id="color-1">
-				  			<div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; M O D E L</h4></div>
-				   			<div id="businessModelPieChart" class="chart"></div>
-				  		</div>
-				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 tuile" id="color-2">
-					  		<div class="chart-title"><h4 style="color:#0D4F8B;">C A T E G O R Y</h4></div>
-				  			<div id="categoryRowChart" class="chart"></div>
-				  		</div>
-				  		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-				  			<div class="row mini-tuile" id="color-3">
-					  			<div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H &nbsp;&nbsp;  M E M B E R S H I P</h4></div>
-			  	  				<div class="chart" id="FF"></div>
-				  			</div>
-				  			<div class="row mini-tuile" id="color-4">
-				  				<div class="chart-title" id="total-raised"><h4>T O T A L &nbsp;&nbsp;  R A I S E D</h4></div>
-			  	  				<div class="chart" id="montant-leve"></div>
-				  			</div>
-				  		</div>
-					</div>	
-					<div class="row">
-				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-5">
-					  		<div class="chart-title"><h4>C R E A T I O N &nbsp;&nbsp;  D A T E</h4></div>
-							<div id="inceptionBarChart" class="chart"></div>
-						</div>
-				  		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 tuile" id="color-6">
-					  		<div class="chart-title" id=""><h4>L A S T  &nbsp;&nbsp; R O U N D S</h4></div>
-							<div id="fundsBarChart" class="chart">
-						</div>				  
-			    	</div>
-			</footer>
-	     </div>
-	</div>
- -->
-
-
-<!-- 
-	<script>	
-		$('#btn-filter').on('click',(function(){
-			$(this).toggleClass('active');
-		}));
-	</script>
- -->
 
    	<script src="/static/js/app.js" type="text/javascript"></script>
 
