--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
 	
  	<link href="/static/css/style.css" rel="stylesheet"/>
  	
-    <title>They.Are.The.French.FinTech.</title>
+    <title>FinTech, Made In France</title>
   </head>
   
   <body data-spy="scroll" data-target="#menu-section">
@@ -44,8 +44,8 @@
 			  <span class="icon-bar"></span>
 			  <span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-family:'Proxima Nova';font-weight:normal" href="#">
-				THEY.ARE.THE.FRENCH.FINTECH
+			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-weight:normal" href="#">
+				FINTECH, <span id="madeinfrance">Made in France </span>
 			  </a>
 			  </div>
 			  
@@ -65,12 +65,12 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<div class="row" id="color-1">
+						<div class="row tuile" id="color-1">
 							<div class="chart-title"><h4>T O T A L &nbsp;&nbsp; R A I S E D</h4></div>
 							<div class="chart" id="montant-leve"><h1 id="total-leve">€<span class="number-display">_</span> MILLION </h1></div>
 						</div>
-						<div class="row" id="color-2">
-							<div class="chart-title"><h4>L A S T &nbsp;&nbsp; R O U N D S</h4></div>
+						<div class="row tuile" id="color-2">
+							<div class="chart-title"><h4>Y E A R L Y &nbsp; F U N D I N G S &nbsp;( € M )</h4></div>
 							<div id="fundsBarChart" class="chart">
 							  <!-- 
      <a
@@ -83,21 +83,21 @@
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="row" id="color-3">
+						<div class="row tuile" id="color-3">
 							 <div class="chart-title"><h4>B U S I N E S S &nbsp;&nbsp; T Y P E</h4></div>
 							 <div id="businessModelPieChart" class="chart"></div>
 						</div>
-						<div class="row" id="color-4">
+						<div class="row tuile" id="color-4">
 							 <div class="chart-title"><h4>C A T E G O R Y</h4></div>
 							 <div id="categoryRowChart" class="chart"></div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="row" id="color-5">
+						<div class="row tuile" id="color-5">
 							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
 							 <div class="chart" id="FF"></div>
 						</div>
-						<div class="row" id="color-6">
+						<div class="row tuile" id="color-6">
 							 <div class="chart-title"><h4>D A T E &nbsp;&nbsp;O F &nbsp;&nbsp; C R E A T I O N</h4></div>
 							 <div id="inceptionBarChart" class="chart"></div>
 						</div>
@@ -158,11 +158,11 @@
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							        <h4 class="FizBack"> SEE ALSO </h4>
-	  								<a class="FizBack" href="http://thefintechjellyfish.theassets.co"> <img class="jellyfish" src="https://www.wristbandnation.com/sites/default/upload/artwork/animal/animal6.png"> </a>
+	  								<a class="FizBack" href="http://thefintechjellyfish.theassets.co"> <img class="jellyfish" src="https://d30y9cdsu7xlg0.cloudfront.net/png/5356-200.png"> </a>
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							    	<h4 class="FizBack"> SHARE </h4>
-	  								<a class="FizBack"><img class="twitter" src="http://www.harrietsanders.co.uk/wp-content/uploads/2014/07/Twitter-Black.png"> </a>
+	  								<a class="FizBack"><img class="twitter" src="http://findicons.com/files/icons/2779/simple_icons/128/twitter_128_black.png"> </a>
 							    </div>
 						</div>
 					</footer>
@@ -170,7 +170,7 @@
 	  	   </div>
 	  </div>
 
-   	<script src="/static/js/app.js" type="text/javascript"></script>
+   	<script src="/static/js/app test.js" type="text/javascript"></script>
    	
    	
    	<script>
