modifs heroku + favicon

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,11 @@
  	<link href="/static/css/style.css" rel="stylesheet"/>
  	
     <title>FinTech, Made In France</title>
+    
+    <link rel="icon" 
+      type="image/png" 
+      href="http://i.imgur.com/gxslvVD.png">
+      
   </head>
   
   <body data-spy="scroll" data-target="#menu-section">
