--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -77,13 +77,7 @@
 						<div class="row tuile" id="color-2">
 							<div class="chart-title"><h4>Y E A R L Y &nbsp; F U N D I N G S &nbsp;( € M )</h4></div>
 							<div id="fundsBarChart" class="chart">
-							  <!-- 
-     <a
-							        class='reset svg' 
-          							href='javascript:fundsChart.filterAll();dc.redraw.all()'
-          							style='display: none; width : 20px; height : 20px;'><img class="svg-cross" src="/static/image/whitecross.svg">
-          							</a>
- -->
+							  
 							</div>
 						</div>
 					</div>
@@ -94,11 +88,19 @@
 						</div>
 						<div class="row tuile" id="color-4">
 							 <div class="chart-title"><h4>C A T E G O R Y</h4></div>
-							 <div id="categoryRowChart" class="chart"></div>
+							 <div id="categoryRowChart" class="chart">
+<!-- 
+							      <a
+							        class='reset svg' 
+          							href='javascript:categoryRowChart.filterAll();dc.redraw.all()'
+          							style='display: none; width : 20px; height : 20px;'><img class="svg-cross" src="/static/image/whitecross.svg">
+          							</a>
+ -->
+							  </div>
 						</div>
 					</div>
 					<div class="col-md-4">
-						<div class="row tuile" id="color-5">
+						<div class="row" id="color-5">
 							 <div class="chart-title"><h4>F R A N C E &nbsp;&nbsp;  F I N T E C H </h4></div>
 							 <div class="chart" id="FF"></div>
 						</div>
@@ -155,7 +157,7 @@
 					<footer>
 						<div class="row" id="footer">
 							    <div class="col-md-6" style="height:50px;">
-	  								<h4 class="FizBack"> BY <a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack </a></h4>
+	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;From&nbsp;<a style="color:black;text-decoration:underline" href="https://theassets.co">The Assets</a> </h4>
 							    </div>
 							    <div class="col-md-2" style="height:50px;">
 							        <h4 class="FizBack"> FORK </h4>
