modifs test redimension

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,7 +50,7 @@
 			  <span class="icon-bar"></span>
 			  </button>
 			  <a class="navbar-brand FrenchFinTech" style="letter-spacing:2px;font-weight:normal" href="#">
-				FINTECH, <span id="madeinfrance">Made in France </span>
+				The French Fintech index
 			  </a>
 			  </div>
 			  
@@ -105,7 +105,7 @@
 							 <div class="chart" id="FF"></div>
 						</div>
 						<div class="row tuile" id="color-6">
-							 <div class="chart-title"><h4>Y E A R L Y &nbsp;&nbsp;S T A R T U P &nbsp;&nbsp; I N C E P T I O N S</h4></div>
+							 <div class="chart-title"><h4>Y E A R L Y &nbsp;&nbsp; I N C E P T I O N S</h4></div>
 							 <div id="inceptionBarChart" class="chart"></div>
 						</div>
 					</div>
@@ -156,13 +156,15 @@
 				<section class="about" id="about">
 					<footer>
 						<div class="row" id="footer">
-							    <div class="col-md-6" style="height:50px;">
-	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;From&nbsp;<a style="color:black;text-decoration:underline" href="https://theassets.co">The Assets</a> </h4>
+							    <div class="col-md-8" style="height:50px;">
+	  								<h4 class="FizBack"> By&nbsp;<a style="color:black;text-decoration:underline" href="https://twitter.com/FizBack">@FizBack</a>&nbsp;For&nbsp;<a style="color:black;text-decoration:underline" href="https://www.twitter.com/the_assets">The Assets</a> </h4>
 							    </div>
-							    <div class="col-md-2" style="height:50px;">
+<!--							    <div class="col-md-2" style="height:50px;">
+ 
 							        <h4 class="FizBack"> FORK </h4>
 	  								<a class="FizBack" href="https://github.com/FizBack/FFintech"> <img class="github" src="https://i.imgur.com/wRNRwGX.png"> </a>
 							    </div>
+ -->
 							    <div class="col-md-2" style="height:50px;">
 							        <h4 class="FizBack"> SEE ALSO </h4>
 	  								<a class="FizBack" href="http://thefintechjellyfish.theassets.co"> <img class="jellyfish" src="https://d30y9cdsu7xlg0.cloudfront.net/png/5356-200.png"> </a>
